[project]
name = "ai-agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.0.0",
    "datasets>=4.5.0",
    "huggingface-hub>=1.4.1",
    "numpy>=2.4.2",
    "openai>=2.20.0",
    "pandas<3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "streamlit>=1.40.0",
]
